add blocks: inner and partners

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,5 @@
 @import './components/body';
 @import './components/container';
 @import './components/header';
+@import './components/inner';
+@import './components/partners';
