--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,11 @@ p {
   border: 1px solid #f2994a;
 }
 
+.button:hover {
+  -webkit-box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+          box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+}
+
 .logo {
   width: 36px;
   height: 36px;
@@ -42,19 +47,22 @@ body {
   background-color: #0f1145;
   color: #8476aa;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
   font-size: 15px;
   letter-spacing: 0.2px;
 }
 
 .container {
-  max-width: 1100px;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  max-width: 1130px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .header__cont {
+  margin-top: 80px;
+  margin-bottom: 135px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,7 +86,6 @@ body {
 
 .header__link {
   margin-left: 30px;
-  font-weight: 600;
   font-size: 12px;
   line-height: 1.67;
   letter-spacing: 2px;
@@ -109,5 +116,110 @@ body {
   width: 112px;
   color: #fff;
   background-color: #f2994a;
+}
+
+.inner {
+  position: relative;
+}
+
+.inner__cont {
+  margin-bottom: 110px;
+  width: 540px;
+}
+
+.inner__title {
+  margin-bottom: 14px;
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 44px;
+  line-height: 1.14;
+  color: #99efd0;
+}
+
+.inner__subtitle {
+  margin-bottom: 40px;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #8476aa;
+}
+
+.inner__btn {
+  margin-bottom: 60px;
+}
+
+.inner__learn {
+  margin-right: 20px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  width: 157px;
+  color: #fff;
+  background-color: #f2994a;
+}
+
+.inner__demo {
+  padding-top: 13px;
+  padding-bottom: 13px;
+  width: 157px;
+  color: #f2994a;
+  background-color: #0f1145;
+}
+
+.inner__video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.inner__iframe {
+  margin-right: 20px;
+}
+
+.inner__desc-text {
+  margin-bottom: 6px;
+  font-family: Rubik;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.37;
+  color: #8476aa;
+}
+
+.inner__desc-link {
+  font-family: Rubik;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.57;
+  color: #6d6d78;
+}
+
+.inner__desc-link:hover {
+  color: #fff;
+}
+
+.inner__img {
+  position: absolute;
+  top: -30px;
+  left: 540px;
+}
+
+.partners__cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.partners__link {
+  display: inline-block;
+}
+
+.partners__icon {
+  width: 105px;
+  height: 25px;
+  fill: #b5b5b5;
+}
+
+.partners__link:hover .partners__icon {
+  fill: #fff;
 }
 /*# sourceMappingURL=main.css.map */
