--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -2,6 +2,7 @@ body {
   background-color: $bgc-color;
   color: $text-color;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
   font-size: 15px;
   letter-spacing: 0.2px;
 }
