--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,5 +7,8 @@
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  border: 1px solid #f2994a;
+  border: 1px solid $color-akcent;
+  &:hover {
+    box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+  }
 }
