--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,7 @@
 .container {
-  max-width: 1100px;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  max-width: 1130px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
