--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,6 @@
 .header__cont {
+  margin-top: 80px;
+  margin-bottom: 135px;
   display: flex;
   justify-content: space-between;
 }
@@ -11,7 +13,6 @@
 }
 .header__link {
   margin-left: 30px;
-  font-weight: 600;
   font-size: 12px;
   line-height: 1.67;
   letter-spacing: 2px;
@@ -23,8 +24,6 @@
   &:hover {
     color: #fff;
   }
-}
-.header__authorize {
 }
 .header__signin {
   padding-top: 8px;
