--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header__cont {
-  margin-top: 80px;
+  padding-top: 80px;
   margin-bottom: 135px;
   display: flex;
   justify-content: space-between;
