--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,12 @@
 @import './base/color';
 @import './base/reset';
+@import './base/extend';
 @import './components/button';
 @import './components/logo';
 @import './components/body';
+@import './components/wrap-head';
 @import './components/container';
 @import './components/header';
 @import './components/inner';
 @import './components/partners';
+@import './components/yourchoice';
