--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,9 +4,11 @@
 @import './components/button';
 @import './components/logo';
 @import './components/body';
-@import './components/wrap-head';
 @import './components/container';
 @import './components/header';
 @import './components/inner';
 @import './components/partners';
 @import './components/yourchoice';
+@import './components/increase';
+@import './components/savemoney';
+@import './components/create';
