--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,5 +1,6 @@
 body {
   background-color: $bgc-color;
+  background-image: linear-gradient(222.26deg, #3b1d60 1.22%, #040d3e 106.28%);
   color: $text-color;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
