--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/extend';
 @import './components/button';
 @import './components/logo';
+@import './components/title-akcent';
 @import './components/body';
 @import './components/container';
 @import './components/header';
@@ -12,3 +13,6 @@
 @import './components/increase';
 @import './components/savemoney';
 @import './components/create';
+@import './components/invest';
+@import './components/feature';
+@import './components/form';
