--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,12 @@ ul {
 h1,
 h2,
 h3,
+h4,
 p {
   margin: 0;
 }
 
-.inner__title, .yourchoice__title, .increase__title, .savemoney__title, .savemonay__item-title, .create__title {
+.inner__title, .yourchoice__title, .increase__title, .savemoney__title, .savemonay__item-title, .create__title, .ivest__title, .feature__content-title, .feature__item-title {
   color: #99efd0;
   font-family: Inter;
   font-weight: bold;
@@ -49,6 +50,10 @@ p {
 .logo {
   width: 36px;
   height: 36px;
+}
+
+.title-akcent {
+  color: #f2994a;
 }
 
 body {
@@ -87,6 +92,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header__logo:hover {
+  -webkit-box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+          box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
 }
 
 .header__nav {
@@ -481,7 +491,7 @@ body {
 }
 
 .create__button {
-  padding: 17px 0;
+  padding: 13px 0;
   width: 164px;
   color: #fff;
   background-color: #f2994a;
@@ -493,5 +503,387 @@ body {
   left: -52px;
   z-index: -1;
   pointer-events: none;
+}
+
+.invest {
+  padding: 143px 0;
+}
+
+.invest__cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.invest__content {
+  width: 470px;
+  margin-right: 193px;
+}
+
+.ivest__title {
+  margin-bottom: 32px;
+  font-size: 42px;
+  line-height: 1.19;
+}
+
+.invest__text {
+  margin-bottom: 46px;
+  line-height: 1.87;
+  letter-spacing: 0.5px;
+}
+
+.invest__button {
+  padding: 13px 0;
+  width: 157px;
+  color: #fff;
+  background-color: #f2994a;
+}
+
+.invest__product {
+  position: relative;
+  width: 260px;
+  background-color: #fff;
+  -webkit-box-shadow: -8px 16px 60px rgba(82, 114, 139, 0.24);
+          box-shadow: -8px 16px 60px rgba(82, 114, 139, 0.24);
+  border-radius: 10px;
+}
+
+.product__img {
+  display: block;
+}
+
+.product__info {
+  padding: 20px 30px 22px;
+}
+
+.product__name {
+  margin-top: 0;
+  margin-bottom: 2px;
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #212b36;
+}
+
+.product__adress {
+  margin-bottom: 22px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.4;
+  letter-spacing: 0.5px;
+  color: #637381;
+}
+
+.product__price {
+  margin-bottom: 5px;
+  font-family: Montserrat;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #13c296;
+}
+
+.product__link {
+  position: relative;
+  display: block;
+  margin-bottom: 35px;
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  color: #98a4af;
+}
+
+.product__link:hover {
+  color: #212b36;
+}
+
+.product__link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 34px;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #d6dbdf;
+  border-radius: 1px;
+}
+
+.product__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.desc__value {
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.21;
+  color: #212b36;
+}
+
+.desc__name {
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: 0.5px;
+  color: #637381;
+}
+
+.product__aside {
+  position: absolute;
+  right: -113px;
+  bottom: 103px;
+  padding: 15px 30px;
+  background-color: #516ea9;
+  -webkit-box-shadow: -8px 16px 60px rgba(82, 114, 139, 0.24);
+          box-shadow: -8px 16px 60px rgba(82, 114, 139, 0.24);
+  border-radius: 10px;
+  z-index: -1;
+}
+
+.aside__value {
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
+}
+
+.aside__name {
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  opacity: 0.8;
+}
+
+.product__icon {
+  position: absolute;
+  top: 115px;
+  left: -65px;
+}
+
+.product__background {
+  position: absolute;
+  top: 16px;
+  left: -137px;
+  z-index: -2;
+}
+
+.feature__cont {
+  margin-bottom: 196px;
+  padding-top: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feature__picture {
+  position: relative;
+  margin-right: 85px;
+  width: 495px;
+  height: 446px;
+}
+
+.feature__picture-img {
+  position: absolute;
+  left: 77px;
+  bottom: 0;
+  display: block;
+  border-radius: 9px;
+}
+
+.feature__picture-img1 {
+  position: absolute;
+  left: 0px;
+  bottom: 82px;
+  z-index: -1;
+}
+
+.feature__picture-img2 {
+  position: absolute;
+  top: 0px;
+  left: 45px;
+  z-index: -1;
+}
+
+.feature__picture-img3 {
+  position: absolute;
+  right: 0;
+  bottom: 150px;
+  z-index: -1;
+}
+
+.feature__content {
+  position: relative;
+  width: 512px;
+}
+
+.feature__content-title {
+  margin-bottom: 32px;
+  font-size: 26px;
+  line-height: 1.23;
+  letter-spacing: 0.325px;
+}
+
+.feature__content-text {
+  margin-bottom: 48px;
+  line-height: 1.33;
+}
+
+.feature__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feature__item--left {
+  margin-right: 70px;
+}
+
+.feature__item-icon {
+  margin-bottom: 15px;
+  width: 35px;
+  height: 37px;
+}
+
+.feature__item-title {
+  margin-bottom: 8px;
+  font-size: 15px;
+  line-height: 1.2;
+}
+
+.feature__item-text {
+  line-height: 1.33;
+}
+
+.feature__background-img {
+  position: absolute;
+  top: -164px;
+  left: 375px;
+}
+
+.form__cont {
+  position: relative;
+  margin-bottom: 139px;
+  padding: 50px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #0f1145;
+  border-radius: 5px;
+}
+
+.form__title {
+  margin-bottom: 20px;
+  font-family: Rubik;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.19;
+  color: #f2994a;
+}
+
+.form__text {
+  margin-bottom: 23px;
+  font-family: Rubik;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.37;
+  color: #95a1bb;
+}
+
+.form__field {
+  margin-bottom: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form__input {
+  width: 308px;
+  margin: 0;
+  padding: 18px 16px;
+  outline: none;
+  background-color: #0f1145;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.form__input::-webkit-input-placeholder {
+  font-family: Inter;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #fff;
+}
+
+.form__input:-ms-input-placeholder {
+  font-family: Inter;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #fff;
+}
+
+.form__input::-ms-input-placeholder {
+  font-family: Inter;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #fff;
+}
+
+.form__input::placeholder {
+  font-family: Inter;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #fff;
+}
+
+.form__button {
+  padding: 18px 0;
+  width: 128px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: #f2994a;
+}
+
+.form__rule {
+  font-size: 14px;
+  line-height: 1.43;
+}
+
+.form__background {
+  position: absolute;
+  top: -30px;
+  z-index: -1;
 }
 /*# sourceMappingURL=main.css.map */
