--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,6 +8,11 @@
   display: flex;
   align-items: center;
 }
+.header__logo {
+  &:hover {
+    box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+  }
+}
 .header__nav {
   margin-left: 44px;
 }
