--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 p {
   margin: 0;
 }
@@ -40,6 +41,10 @@ p {
   letter-spacing: 2px;
   text-transform: uppercase;
   border: 1px solid #f2994a;
+  -webkit-transition: -webkit-box-shadow 250ms linear;
+  transition: -webkit-box-shadow 250ms linear;
+  transition: box-shadow 250ms linear;
+  transition: box-shadow 250ms linear, -webkit-box-shadow 250ms linear;
 }
 
 .button:hover {
@@ -94,6 +99,13 @@ body {
           align-items: center;
 }
 
+.header__logo {
+  -webkit-transition: -webkit-box-shadow 250ms linear;
+  transition: -webkit-box-shadow 250ms linear;
+  transition: box-shadow 250ms linear;
+  transition: box-shadow 250ms linear, -webkit-box-shadow 250ms linear;
+}
+
 .header__logo:hover {
   -webkit-box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
           box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
@@ -110,6 +122,8 @@ body {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #b5b5b5;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
 }
 
 .header__link:first-child {
@@ -205,6 +219,8 @@ body {
   font-size: 14px;
   line-height: 1.57;
   color: #6d6d78;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
 }
 
 .inner__desc-link:hover {
@@ -229,16 +245,19 @@ body {
 .partners__link {
   display: inline-block;
   cursor: pointer;
+  color: #b5b5b5;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
+}
+
+.partners__link:hover {
+  color: #f2994a;
 }
 
 .partners__icon {
   width: 105px;
   height: 25px;
-  fill: #b5b5b5;
-}
-
-.partners__link:hover .partners__icon {
-  fill: #f2994a;
+  fill: currentColor;
 }
 
 .yourchoice__cont {
@@ -600,6 +619,8 @@ body {
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #98a4af;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
 }
 
 .product__link:hover {
@@ -885,5 +906,143 @@ body {
   position: absolute;
   top: -30px;
   z-index: -1;
+}
+
+.footer__cont {
+  position: relative;
+  padding: 46px 54px 100px;
+}
+
+.footer__author {
+  margin-bottom: 94px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__author-name {
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.23;
+  letter-spacing: 0.325px;
+  color: #f2994a;
+}
+
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social__item:not(:last-child) {
+  margin-right: 16px;
+}
+
+.social__item-link {
+  width: 40px;
+  height: 40px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #2f2b58;
+  -webkit-transition: background-color 250ms linear, color 250ms linear;
+  transition: background-color 250ms linear, color 250ms linear;
+}
+
+.social__item-link:hover, .social__item-link:focus {
+  background-color: #f2994a;
+  color: #000;
+}
+
+.social__item-icon {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+}
+
+.footer__site-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 120px;
+}
+
+.site-nav__title {
+  margin-bottom: 25px;
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 1.2;
+  color: #99efd0;
+}
+
+.site-nav__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.site-nav__link {
+  font-family: Inter;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 1.33;
+  color: #ffffff;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
+}
+
+.site-nav__link:hover {
+  color: #f2994a;
+}
+
+.footer__copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.copyright__text {
+  font-family: Inter;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #8d8d8d;
+}
+
+.copyright__text:not(:last-child) {
+  margin-right: 32px;
+}
+
+.footer__bg {
+  position: absolute;
+  pointer-events: none;
+  left: -310px;
+  bottom: 0;
 }
 /*# sourceMappingURL=main.css.map */
