--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,6 +10,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   border: 1px solid $color-akcent;
+  transition: box-shadow 250ms linear;
   &:hover {
     box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
   }
