--- a/sass/components/_inner.scss
+++ b/sass/components/_inner.scss
@@ -56,6 +56,7 @@
   font-size: 14px;
   line-height: 1.57;
   color: #6d6d78;
+  transition: color 250ms linear;
   &:hover {
     color: #fff;
   }
