--- a/sass/components/_invest.scss
+++ b/sass/components/_invest.scss
@@ -76,7 +76,7 @@
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #98a4af;
-
+  transition: color 250ms linear;
   &:hover {
     color: #212b36;
   }
