--- a/sass/components/_savemoney.scss
+++ b/sass/components/_savemoney.scss
@@ -20,14 +20,9 @@
   letter-spacing: 0.2px;
 }
 .savemoney__list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: -54px;
-}
-.savemoney__item {
-  width: calc((100% - 6 * 54px) / 3);
-  margin: 54px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 109px;
 }
 .savemonay__item-title {
   margin-bottom: 16px;
