--- a/sass/components/_yourchoice.scss
+++ b/sass/components/_yourchoice.scss
@@ -17,22 +17,20 @@
   color: $text-color;
 }
 .yourchoice__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -25px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 50px;
+  grid-row-gap: 35px;
 }
 .yourchoice__item {
-  display: flex;
-  flex-wrap: wrap;
-  width: calc((100% - 6 * 25px) / 3);
-  margin: 25px;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-row-gap: 10px;
 }
-.yourchoice__item-box {
-  margin-bottom: 10px;
-  display: flex;
-}
+
 .yourchoice__item-icon {
-  margin-right: 28px;
+  grid-row-start: 1;
+  grid-row-end: 3;
   width: 24px;
   height: 24px;
 }
@@ -43,7 +41,6 @@
   color: $color-title;
 }
 .yourchoice__item-text {
-  margin-left: 52px;
   font-size: 14px;
   line-height: 1.57;
   color: $text-color;
